--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,7 +34,7 @@ save-flow-typed-cache: &save-flow-typed-cache
     paths:
       - ./flow-typed
 
-npm-cache-key: &npm-cache-key node-v10-{{ checksum "package-lock.json" }}
+npm-cache-key: &npm-cache-key node-v10-test-{{ checksum "package-lock.json" }}
 
 restore-npm-cache: &restore-npm-cache
   restore_cache:
