--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,27 +34,15 @@ save-flow-typed-cache: &save-flow-typed-cache
     paths:
       - ./flow-typed
 
-npm-cache-key: &npm-cache-key node-v10-{{ checksum "package-lock.json" }}
-npm-cache-key24: &npm-cache-key24 node-v8-{{ checksum "package-lock.json" }}
+npm-cache-key: &npm-cache-key node-v10-{{ .Environment.DB }}-{{ checksum "package-lock.json" }}
 
 restore-npm-cache: &restore-npm-cache
   restore_cache:
     key: *npm-cache-key
 
-restore-npm-cache24: &restore-npm-cache24
-  restore_cache:
-    key: *npm-cache-key24
-
 save-npm-cache: &save-npm-cache
   save_cache:
     key: *npm-cache-key
-    paths:
-      - ./node_modules
-      - ./flow-typed
-
-save-npm-cache24: &save-npm-cache24
-  save_cache:
-    key: *npm-cache-key24
     paths:
       - ./node_modules
       - ./flow-typed
@@ -457,27 +445,6 @@ jobs:
             npm --version
             npm run check-dependencies
       - *save-npm-cache
-      - persist_to_workspace:
-          root: .
-          paths:
-            - ./node_modules
-
-  dependencies_npm24:
-    parameters:
-      executor:
-        type: string
-        default: builder-ruby24
-    executor:
-      name: << parameters.executor >>
-    steps:
-      - checkout-with-submodules
-      - *restore-npm-cache24
-      - run:
-          name: Install NPM dependencies
-          command: |
-            npm --version
-            npm run check-dependencies
-      - *save-npm-cache24
       - persist_to_workspace:
           root: .
           paths:
@@ -899,13 +866,13 @@ workflows:
           <<: *only-master-filter
       - dependencies_bundler:
           executor: builder-ruby24
-      - dependencies_npm24:
+      - dependencies_npm:
           executor: builder-ruby24
       - assets_precompile:
           executor: builder-ruby24
           requires:
             - dependencies_bundler
-            - dependencies_npm24
+            - dependencies_npm
       - unit:
           executor: builder-ruby24
           requires:
