--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,19 +34,6 @@ save-flow-typed-cache: &save-flow-typed-cache
     paths:
       - ./flow-typed
 
-npm-cache-key: &npm-cache-key node-v10-{{ .Environment.DB }}-{{ checksum "package-lock.json" }}
-
-restore-npm-cache: &restore-npm-cache
-  restore_cache:
-    key: *npm-cache-key
-
-save-npm-cache: &save-npm-cache
-  save_cache:
-    key: *npm-cache-key
-    paths:
-      - ./node_modules
-      - ./flow-typed
-
 restore-flow-typed-cache: &restore-flow-typed-cache
   restore_cache:
     key: flow-typed-{{ checksum "package-lock.json" }}
@@ -288,6 +275,17 @@ commands: # reusable commands with parameters
             bundle exec rake test:run TESTS="$TESTS" TESTOPTS=--verbose --verbose --trace
       - upload-artifacts
 
+save-npm-cache:
+  save_cache:
+    key: node-v10-{{ .Environment.DB }}-{{ checksum "package-lock.json" }}
+    paths:
+      - ./node_modules
+      - ./flow-typed
+
+restore-npm-cache:
+  restore_cache:
+    key: node-v10-{{ .Environment.DB }}-{{ checksum "package-lock.json" }}
+
   save-gem-cache:
     steps:
       - save_cache:
@@ -438,13 +436,13 @@ jobs:
       name: << parameters.executor >>
     steps:
       - checkout-with-submodules
-      - *restore-npm-cache
+      - restore-npm-cache
       - run:
           name: Install NPM dependencies
           command: |
             npm --version
             npm run check-dependencies
-      - *save-npm-cache
+      - save-npm-cache
       - persist_to_workspace:
           root: .
           paths:
