[git] Ignoring yarn local files and package-lock

--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,10 @@ Gemfile.local
 # Typings
 flow-typed
 config/cable.yml
+
+# Yarn
+.yarn/cache
+.yarn/unplugged
+.yarn/build-state.yml
+.pnp.*
+package-lock.json
