--- a/openshift/system/Dockerfile.on_prem
+++ b/openshift/system/Dockerfile.on_prem
@@ -52,7 +52,8 @@ RUN chgrp root /opt/system/
 
 ADD . ./
 ADD config/docker/* ./config/
-ADD package*.json ./
+ADD package.json ./
+ADD yarn.lock ./
 ADD openshift/system/config/* ./config/
 
 RUN export ${BUNDLER_ENV} >/dev/null \
@@ -62,7 +63,8 @@ RUN export ${BUNDLER_ENV} >/dev/null \
     && chmod g+w -vfR log tmp public/assets db/sphinx \
     && umask 0002 \
     && cd /opt/system \
-    && npm install --no-progress \
+    && npm install -g yarn \
+    && yarn install:safe --no-progress \
     && bundle exec rake assets:precompile tmp:clear \
     && rm log/*.log \
     && chmod g+w /opt/system/config
