[circle] Adding gas to assets_precompile

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -427,6 +427,7 @@ jobs:
             - ./node_modules
 
   assets_precompile:
+    resource_class: large
     parameters:
       executor:
         type: string
